labs/lab02-deploy-application/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-openshift
  labels:
    app: hello-openshift
    lab: lab02
spec:
  selector:
    app: hello-openshift
  ports:
    - name: http
      port: 8080
      targetPort: 8080
