labs/lab02-deploy-application/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-openshift
  labels:
    app: hello-openshift
    lab: lab02
spec:
  to:
    kind: Service
    name: hello-openshift
  port:
    targetPort: http
